--- a/CNN_color_kousakensyou.ipynb
+++ b/CNN_color_kousakensyou.ipynb
@@ -58,9 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def list_pictures(directory, ext='jpg|jpeg|bmp|png|ppm'):\n",
@@ -72,7 +70,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -80,8 +80,7 @@
      "text": [
       "人工物画像のテストデータを取得してます...\n",
       "人工物画像のテストデータを取得しました\n",
-      "自然物画像のテストデータを取得してます...\n",
-      "自然物画像のテストデータを取得しました\n"
+      "自然物画像のテストデータを取得してます...\n"
      ]
     }
    ],
@@ -93,34 +92,27 @@
     "print(\"人工物画像のテストデータを取得してます...\")\n",
     "for filepath in list_pictures('../data/CNN_data/test/jinkou/'):\n",
     "    warnings.filterwarnings('ignore')\n",
-    "    img_eva = img_to_array(load_img(filepath, grayscale=True, target_size=(128, 128)))        \n",
+    "    img_eva = img_to_array(load_img(filepath, target_size=(128, 128)))        \n",
     "    X_eva.append(img_eva)\n",
     "    Y_eva.append(0) # 教師データ（正解）\n",
     "\n",
     "print(\"人工物画像のテストデータを取得しました\")\n",
     "\n",
     "    \n",
-    "# 学習データの取得（非正解画像）\n",
     "print(\"自然物画像のテストデータを取得してます...\")\n",
     "for filepath in list_pictures('../data/CNN_data/test/sizen/'):\n",
-    "    img_eva = img_to_array(load_img(filepath, grayscale=True, target_size=(128, 128)))\n",
+    "    img_eva = img_to_array(load_img(filepath, target_size=(128, 128)))\n",
     "    X_eva.append(img_eva)\n",
     "    Y_eva.append(1) # 教師データ（正解）\n",
     "\n",
-    "print(\"自然物画像のテストデータを取得しました\")\n",
     "\n",
     "# NumPy配列に変換\n",
     "X_eva = np.asarray(X_eva)\n",
     "Y_eva = np.asarray(Y_eva)\n",
     "\n",
     "\n",
-    "#X = X.reshape(X.shape[0], 128, 128)   \n",
-    "#X_eva = X_eva.reshape(X_eva.shape[0], 128, 128)\n",
-    "    \n",
-    "\n",
     "# float32型に変換\n",
     "X_eva = X_eva.astype('float32')\n",
-    "\n",
     "\n",
     "# 正規化(0～1)\n",
     "X_eva = X_eva / 255.0\n"
@@ -136,8 +128,6 @@
      "output_type": "stream",
      "text": [
       "テストデータをzca白色化しています...\n",
-      "(2400, 128, 128, 1)\n",
-      "(2400,)\n",
       "テストデータをzca白色化しました\n"
      ]
     }
@@ -148,18 +138,12 @@
     "datagen = ImageDataGenerator(zca_whitening=True)\n",
     "g = datagen.flow(X_eva, Y_eva, X_eva.shape[0], shuffle=False)\n",
     "x_test, y_test = g.next()\n",
-    "print(x_test.shape)\n",
-    "print(Y_eva.shape)\n",
-    "print(\"テストデータをzca白色化しました\")\n",
-    "    \n",
-    "# 学習用データとテストデータに分割\n",
-    "#x_test = x_zcaw_eva\n",
-    "#y_test = Y_eva"
+    "print(\"テストデータをzca白色化しました\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -169,68 +153,98 @@
      "output_type": "stream",
      "text": [
       "1 / 3\n",
-      "Epoch 1/5\n",
-      "1600/1600 [==============================] - 6s 4ms/step - loss: 2.4891 - acc: 0.5369\n",
-      "Epoch 2/5\n",
-      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.7283 - acc: 0.5734\n",
-      "Epoch 3/5\n",
-      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.7079 - acc: 0.5241\n",
-      "Epoch 4/5\n",
-      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.6909 - acc: 0.6016\n",
-      "Epoch 5/5\n",
-      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.6043 - acc: 0.7009\n",
-      "人工物画像の正解： 175 / 287 ＝ 60.97560975609756 %\n",
-      "自然物画像の正解： 288 / 513 ＝ 56.14035087719298 %\n",
+      "Epoch 1/10\n",
+      "1600/1600 [==============================] - 8s 5ms/step - loss: 1.6170 - acc: 0.6109\n",
+      "Epoch 2/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.6005 - acc: 0.6769\n",
+      "Epoch 3/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.6431 - acc: 0.6759\n",
+      "Epoch 4/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.5986 - acc: 0.6778\n",
+      "Epoch 5/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.6025 - acc: 0.6897\n",
+      "Epoch 6/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.5959 - acc: 0.7137\n",
+      "Epoch 7/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.5059 - acc: 0.7669\n",
+      "Epoch 8/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.4530 - acc: 0.7919\n",
+      "Epoch 9/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.4524 - acc: 0.7881\n",
+      "Epoch 10/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.5321 - acc: 0.7869\n",
+      "人工物画像の正解： 340 / 452 ＝ 75.22123893805309 %\n",
+      "自然物画像の正解： 288 / 348 ＝ 82.75862068965517 %\n",
       " \n",
       "2 / 3\n",
-      "Epoch 1/5\n",
-      "1600/1600 [==============================] - 6s 4ms/step - loss: 1.9876 - acc: 0.5322\n",
-      "Epoch 2/5\n",
-      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.8334 - acc: 0.5447\n",
-      "Epoch 3/5\n",
-      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.7360 - acc: 0.5425\n",
-      "Epoch 4/5\n",
-      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.6325 - acc: 0.6584\n",
-      "Epoch 5/5\n",
-      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.5338 - acc: 0.7525\n",
-      "人工物画像の正解： 44 / 48 ＝ 91.66666666666666 %\n",
-      "自然物画像の正解： 396 / 752 ＝ 52.659574468085104 %\n",
+      "Epoch 1/10\n",
+      "1600/1600 [==============================] - 6s 4ms/step - loss: 2.4056 - acc: 0.5600\n",
+      "Epoch 2/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.6285 - acc: 0.6691\n",
+      "Epoch 3/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.6276 - acc: 0.6809\n",
+      "Epoch 4/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.5764 - acc: 0.7259\n",
+      "Epoch 5/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.5847 - acc: 0.7534\n",
+      "Epoch 6/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.4121 - acc: 0.8209\n",
+      "Epoch 7/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.4001 - acc: 0.8378\n",
+      "Epoch 8/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.3417 - acc: 0.8575\n",
+      "Epoch 9/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.3640 - acc: 0.8622\n",
+      "Epoch 10/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.3501 - acc: 0.8612\n",
+      "人工物画像の正解： 214 / 222 ＝ 96.3963963963964 %\n",
+      "自然物画像の正解： 392 / 578 ＝ 67.82006920415225 %\n",
       " \n",
       "3 / 3\n",
-      "Epoch 1/5\n",
-      "1600/1600 [==============================] - 7s 4ms/step - loss: 3.0253 - acc: 0.5241\n",
-      "Epoch 2/5\n",
-      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.7354 - acc: 0.5697\n",
-      "Epoch 3/5\n",
-      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.6948 - acc: 0.5697\n",
-      "Epoch 4/5\n",
-      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.6685 - acc: 0.6562\n",
-      "Epoch 5/5\n",
-      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.5416 - acc: 0.7491\n",
-      "人工物画像の正解： 203 / 283 ＝ 71.73144876325088 %\n",
-      "自然物画像の正解： 320 / 517 ＝ 61.89555125725339 %\n",
+      "Epoch 1/10\n",
+      "1600/1600 [==============================] - 7s 4ms/step - loss: 2.3052 - acc: 0.4881\n",
+      "Epoch 2/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.7194 - acc: 0.5513\n",
+      "Epoch 3/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.7194 - acc: 0.6094\n",
+      "Epoch 4/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.6185 - acc: 0.6750\n",
+      "Epoch 5/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.6053 - acc: 0.6575\n",
+      "Epoch 6/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.5956 - acc: 0.6850\n",
+      "Epoch 7/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.5888 - acc: 0.6966\n",
+      "Epoch 8/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.5756 - acc: 0.7128\n",
+      "Epoch 9/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.5180 - acc: 0.7416\n",
+      "Epoch 10/10\n",
+      "1600/1600 [==============================] - 5s 3ms/step - loss: 0.4949 - acc: 0.7672\n",
+      "人工物画像の正解： 118 / 120 ＝ 98.33333333333333 %\n",
+      "自然物画像の正解： 398 / 680 ＝ 58.529411764705884 %\n",
       " \n",
       "1 / 3\n",
-      "人工物画像の正解率＝ 60.97560975609756 %\n",
-      "自然物画像の正解率＝ 56.14035087719298 %\n",
-      "全体画像の正解率＝ 58.55798031664527 %\n",
+      "人工物画像の正解率＝ 75.22123893805309 %\n",
+      "自然物画像の正解率＝ 82.75862068965517 %\n",
+      "全体画像の正解率＝ 78.98992981385413 %\n",
       "2 / 3\n",
-      "人工物画像の正解率＝ 91.66666666666666 %\n",
-      "自然物画像の正解率＝ 52.659574468085104 %\n",
-      "全体画像の正解率＝ 72.16312056737588 %\n",
+      "人工物画像の正解率＝ 96.3963963963964 %\n",
+      "自然物画像の正解率＝ 67.82006920415225 %\n",
+      "全体画像の正解率＝ 82.10823280027432 %\n",
       "3 / 3\n",
-      "人工物画像の正解率＝ 71.73144876325088 %\n",
-      "自然物画像の正解率＝ 61.89555125725339 %\n",
-      "全体画像の正解率＝ 66.81350001025214 %\n",
+      "人工物画像の正解率＝ 98.33333333333333 %\n",
+      "自然物画像の正解率＝ 58.529411764705884 %\n",
+      "全体画像の正解率＝ 78.43137254901961 %\n",
       " \n",
-      "平均正解率：65.84% (+/- 5.60%)\n"
+      "平均正解率：79.84% (+/- 1.62%)\n"
      ]
     }
    ],
    "source": [
     "batch_size = 32 # バッチサイズ(データサイズ)\n",
     "num_classes = 2 # 分類クラス数(今回は0～9の手書き文字なので10)\n",
-    "epochs = 5 # エポック数(学習の繰り返し回数)\n",
+    "epochs = 10 # エポック数(学習の繰り返し回数)\n",
     "ave = 0\n",
     "fold_num = 3\n",
     "seed = 5\n",
@@ -250,7 +264,7 @@
     "    model = Sequential()\n",
     "\n",
     "    # Dense：全結合のニューラルネットワークレイヤー\n",
-    "    model.add(layers.Conv2D(64, (3, 3), padding='same', activation='relu', input_shape=(128, 128, 1)))\n",
+    "    model.add(layers.Conv2D(64, (3, 3), padding='same', activation='relu', input_shape=(128, 128, 3)))\n",
     "    model.add(layers.Conv2D(64, (3, 3), padding='same', activation='relu'))\n",
     "    model.add(layers.BatchNormalization())\n",
     "    #model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
